# mate-desktop-branding

./: .gitignore  Makefile.am  README.rst  autogen.sh  configure.ac  meson.build  mkrelease.sh
env/: 60-mate-accessibility.sh  Makefile.am  meson.build
lightdm/: 20_mate_default.conf  30_mate_material.conf  Makefile.am  meson.build
panel/: Makefile.am  meson.build  solus-live.layout  solus.layout
schemas/: Makefile.am  meson.build
schemas/livecd/: Makefile.am  meson.build  org.mate.caja.desktop.gschema.override  org.mate.panel.gschema.override
schemas/mate/: Makefile.am  com.solus-project.brisk-menu.gschema.override  meson.build  org.mate.Marco.general.gschema.override  org.mate.NotificationDaemon.gschema.override  org.mate.background.gschema.override  org.mate.font-rendering.gschema.override  org.mate.interface.gschema.override  org.mate.panel.applet.clock.gschema.override  org.mate.panel.gschema.override  org.mate.panel.menubar.gschema.override  org.mate.peripherals-mouse.gschema.override  org.mate.peripherals-touchpad.gschema.override  x.dm.slick-greeter.gschema.override
schemas/material/: meson.build  org.mate.Marco.general.gschema.override  org.mate.background.gschema.override  org.mate.interface.gschema.override  x.dm.slick-greeter.gschema.override
