AC_INIT([MATE Desktop Branding], 2, [ikey@solus-project.com], [mate-desktop-branding], [https://solus-project.com/])
AM_INIT_AUTOMAKE([-Wno-portability no-dist-gzip dist-xz foreign subdir-objects])
AC_PREFIX_DEFAULT(/usr/local)

AC_CONFIG_FILES([Makefile
                schemas/Makefile
                schemas/mate/Makefile])
AC_OUTPUT
